# vergil

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE-APACHE  Makefile  NOTICE  README.md  openapi.yaml
crates/vergil-cli/: Cargo.toml
crates/vergil-cli/src/: config.rs  lib.rs  main.rs
crates/vergil-cli/tests/: catalog_self_test_cli.rs  phase4_cli_flags.rs  phase4_live.rs  phase5_exit.rs  phase6_layout.rs  phase6_live.rs  phase6_prove_tier.rs  phase6_snapshots.rs  prove_v1_compat.rs
crates/vergil-core/: Cargo.toml
crates/vergil-core/src/: catalog_intent.rs  cegis.rs  confirm.rs  critique.rs  diagnosis.rs  fingerprint.rs  lib.rs  natspec_intent.rs  portfolio.rs  refinement.rs  structural.rs  synthesis.rs  telemetry.rs  tests_intent.rs
crates/vergil-core/tests/: cegis_telemetry.rs  phase4_snapshots.rs  portfolio_e2e.rs  synthesis_mock.rs
crates/vergil-llm/: Cargo.toml
crates/vergil-llm/src/: anthropic.rs  lib.rs  mock.rs  openai.rs  prompts.rs  retry.rs  trace.rs
crates/vergil-llm/tests/: anthropic_recorded.rs  mock.rs  openai_recorded.rs
crates/vergil-mutation/: Cargo.toml
crates/vergil-mutation/src/: gambit.rs  lib.rs  scorer.rs
crates/vergil-mutation/tests/: gambit_real.rs
crates/vergil-proof/: Cargo.toml
crates/vergil-proof/src/: lib.rs  schema.rs  verify.rs
crates/vergil-properties/: Cargo.toml
crates/vergil-properties/src/: attack_catalog.rs  catalog.rs  classify.rs  embed.rs  lib.rs  manifest.rs  retrieval.rs  template_render.rs
crates/vergil-properties/tests/: attack_fixtures.rs  catalog_load.rs  classify_ground_truth.rs  manifest_validation_erc20.rs  voyage_live.rs
crates/vergil-service/: Cargo.toml
crates/vergil-service/src/: auth.rs  handlers.rs  job.rs  lib.rs  metrics.rs  store.rs
crates/vergil-solidity/: Cargo.toml
crates/vergil-solidity/src/: foundry.rs  halmos.rs  lib.rs  natspec.rs  sandbox.rs  signatures.rs  slither.rs  smtchecker.rs  solver.rs  static_analysis.rs  storage.rs  test_parser.rs  tools.rs
crates/vergil-solidity/tests/: foundry_emit.rs  halmos_e2e.rs  smtchecker_e2e.rs  static_analysis_e2e.rs
vergilbench/: Cargo.toml  NOTICE  README.md  primitives-ground-truth.yaml
vergilbench/calibration/contracts/: .gitignore
vergilbench/contracts/amm-constant-product/: properties.yaml
vergilbench/contracts/erc20/: properties.yaml
vergilbench/contracts/erc20-capped/: properties.yaml
vergilbench/contracts/erc20-pausable/: properties.yaml
vergilbench/contracts/erc721/: properties.yaml
vergilbench/contracts/lending/: foundry.toml  properties.yaml
vergilbench/contracts/ownable-counter/: properties.yaml
vergilbench/contracts/oz-access-manager/: properties.yaml
vergilbench/contracts/oz-accesscontrol/: properties.yaml
vergilbench/contracts/oz-accesscontrol-defaultadmin/: properties.yaml
vergilbench/contracts/oz-accesscontrol-enumerable/: properties.yaml
vergilbench/contracts/oz-base64/: properties.yaml
vergilbench/contracts/oz-beacon/: properties.yaml
vergilbench/contracts/oz-bitmaps/: properties.yaml
vergilbench/contracts/oz-checkpoints/: properties.yaml
vergilbench/contracts/oz-clones/: properties.yaml
vergilbench/contracts/oz-comparators/: properties.yaml
vergilbench/contracts/oz-create2/: properties.yaml
vergilbench/contracts/oz-deque/: properties.yaml
vergilbench/contracts/oz-ecdsa/: properties.yaml
vergilbench/contracts/oz-eip712/: properties.yaml
vergilbench/contracts/oz-enumerablemap/: properties.yaml
vergilbench/contracts/oz-enumerableset/: properties.yaml
vergilbench/contracts/oz-enumerableset-uint/: properties.yaml
vergilbench/contracts/oz-erc1155-basic/: properties.yaml
vergilbench/contracts/oz-erc1155-burnable/: properties.yaml
vergilbench/contracts/oz-erc1155-full/: properties.yaml
vergilbench/contracts/oz-erc1155-pausable/: properties.yaml
vergilbench/contracts/oz-erc1155-supply/: properties.yaml
vergilbench/contracts/oz-erc1155-supply-burnable/: properties.yaml
vergilbench/contracts/oz-erc1155-uristorage/: properties.yaml
vergilbench/contracts/oz-erc1363/: properties.yaml
vergilbench/contracts/oz-erc165/: properties.yaml
vergilbench/contracts/oz-erc165checker/: properties.yaml
vergilbench/contracts/oz-erc1967-proxy/: foundry.toml  properties.yaml
vergilbench/contracts/oz-erc20-basic/: properties.yaml
vergilbench/contracts/oz-erc20-blocklist/: properties.yaml
vergilbench/contracts/oz-erc20-burnable/: properties.yaml
vergilbench/contracts/oz-erc20-capped-burnable/: properties.yaml
vergilbench/contracts/oz-erc20-capped-oz/: properties.yaml
vergilbench/contracts/oz-erc20-capped-pausable/: properties.yaml
vergilbench/contracts/oz-erc20-decimals/: properties.yaml
vergilbench/contracts/oz-erc20-flashmint/: properties.yaml
vergilbench/contracts/oz-erc20-flashmint-burnable/: properties.yaml
vergilbench/contracts/oz-erc20-governance-full/: properties.yaml
vergilbench/contracts/oz-erc20-maxwallet/: properties.yaml
vergilbench/contracts/oz-erc20-mintable-accesscontrol/: properties.yaml
vergilbench/contracts/oz-erc20-mintable-ownable/: properties.yaml
vergilbench/contracts/oz-erc20-pausable-oz/: properties.yaml
vergilbench/contracts/oz-erc20-permit/: properties.yaml
vergilbench/contracts/oz-erc20-permit-pausable/: properties.yaml
vergilbench/contracts/oz-erc20-stablecoin/: properties.yaml
vergilbench/contracts/oz-erc20-taxed/: properties.yaml
vergilbench/contracts/oz-erc20-votes/: properties.yaml
vergilbench/contracts/oz-erc20-wrapper/: properties.yaml
vergilbench/contracts/oz-erc2771-context/: properties.yaml
vergilbench/contracts/oz-erc2981/: properties.yaml
vergilbench/contracts/oz-erc4626-capped/: properties.yaml
vergilbench/contracts/oz-erc4626-fees/: properties.yaml
vergilbench/poc-corpus/: README.md
vergilbench/results/: 2026-05-27T23-36-17-071280+0000.json  2026-05-28T19-42-08-646202+0000.json  2026-05-29T02-44-41-005733+0000.json
vergilbench/src/: calibration.rs  intent_quality.rs  lib.rs  runner.rs
vergilbench/tests/: intent_quality_fixture.rs  poc_corpus.rs
(+902 files in other folders)
