[package]
name = "vergilbench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Gates the held-out PoC corpus tests (`tests/poc_corpus.rs`), which
# build + run Halmos against each reproduced exploit. Heavy — opt in
# via `--features integration` like the catalog's fixture tests.
integration = []

[[bin]]
name = "vergilbench-calibration"
path = "src/calibration.rs"

[[bin]]
name = "vergilbench"
path = "src/runner.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
vergil-core = { path = "../crates/vergil-core" }
vergil-solidity = { path = "../crates/vergil-solidity" }

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
tokio = { workspace = true }
vergil-properties = { path = "../crates/vergil-properties" }
vergil-solidity = { path = "../crates/vergil-solidity" }
