[package]
name = "vergil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vergil"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
vergil-core = { path = "../vergil-core" }
vergil-solidity = { path = "../vergil-solidity" }
vergil-proof = { path = "../vergil-proof" }
