[package]
name = "vergil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vergil"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
vergil-core = { path = "../vergil-core" }
vergil-solidity = { path = "../vergil-solidity" }
vergil-proof = { path = "../vergil-proof" }
vergil-llm = { path = "../vergil-llm" }
vergil-properties = { path = "../vergil-properties" }
vergil-mutation = { path = "../vergil-mutation" }

[dev-dependencies]
tempfile = "3"
