[package]
name = "vergil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "vergil_cli"
path = "src/lib.rs"

[[bin]]
name = "vergil"
path = "src/main.rs"

[[bin]]
name = "kill-criterion"
path = "src/bin/kill_criterion.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
vergil-core = { path = "../vergil-core" }
vergil-solidity = { path = "../vergil-solidity" }
vergil-proof = { path = "../vergil-proof" }
vergil-llm = { path = "../vergil-llm" }
vergil-properties = { path = "../vergil-properties" }
vergil-mutation = { path = "../vergil-mutation" }
tempfile = "3"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { workspace = true }

[features]
# Opt-in: run integration tests that hit live LLM providers. Requires
# VERGIL_ANTHROPIC_API_KEY (or ANTHROPIC_API_KEY) in the environment.
# Off by default to avoid CI bills per SPEC §11 (manual-only CI).
llm-live = ["vergil-core/llm-live", "vergil-llm/llm-live"]
