[package]
name = "vergil-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
sha2 = "0.10"
futures = "0.3"
hex = "0.4"

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3"

[features]
integration = []
llm-live = []
