[package]
name = "vergil-properties"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
integration = []
