[package]
name = "vergil-properties"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
sha2 = "0.10"
hex = "0.4"
vergil-solidity = { path = "../vergil-solidity" }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
bytemuck = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
dotenvy = "0.15"

[features]
integration = []
llm-live = []
