[package]
name = "vergil-solidity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
indoc = "2"
tempfile = "3"
which = "5"

[features]
integration = []
